# ArtEdge

./: .gitignore  README.md
ArtEdge/: ArtEdgeApp.swift  CameraPreviewView.swift  CameraService.swift  ContentView.swift  ImagePicker.swift  StyleInfo.swift  StyleTransferService.swift
ArtEdge.xcodeproj/: project.pbxproj
models/: README.md  pyproject.toml
models/AdaIN/code/: convert.py  inference.py  mobilenet_adain.py  train_adain.py
models/AdaIN/models/: adain_mobilenet_model_brushstrokes.pth  adain_mobilenet_model_mondrian.pth  adain_mobilenet_model_starrynight.pth
models/AdaIN/models/AdaIN-brushstrokes.mlpackage/: Manifest.json
models/AdaIN/models/AdaIN-brushstrokes.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/AdaIN/models/AdaIN-mondrian.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/AdaIN/models/AdaIN-starrynight.mlpackage/: Manifest.json
models/AdaIN/models/AdaIN-starrynight.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/AesFA/: README.md
models/AesFA/code/: Config.py  DataSplit.py  blocks.py  convert.py  model.py  networks.py  test.py  vgg19.py
models/FST/: convert.py  inference.py  utils.py
models/FST/modeling/: transformation_models.py
models/FST/models/FST-Mosaic.mlpackage/: Manifest.json
models/FST/models/FST-Starry.mlpackage/: Manifest.json
models/FST/models/FST-Starry.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/StyTR-2/: convert.py  inference.py
models/StyTR-2/experiments/StyTr2.mlpackage/: Manifest.json
models/StyTR-2/experiments/StyTr2.mlpackage/Data/com.apple.CoreML/: model.mlmodel
(+29 files in other folders)
